tests/ui/rust-2024/reserved-guarded-strings.stderr
error: prefix `blah` is unknown
  --> $DIR/reserved-guarded-strings.rs:51:12
   |
LL |     demo2!(blah"xx");
   |            ^^^^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
LL |     demo2!(blah "xx");
   |                +

error: prefix `blah` is unknown
  --> $DIR/reserved-guarded-strings.rs:52:12
   |
LL |     demo2!(blah#"xx"#);
   |            ^^^^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
LL |     demo2!(blah #"xx"#);
   |                +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:52:16
   |
LL |     demo2!(blah#"xx"#);
   |                ^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo2!(blah# "xx"#);
   |                 +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:56:12
   |
LL |     demo1!(#"");
   |            ^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(# "");
   |             +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:57:12
   |
LL |     demo1!(#""#);
   |            ^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(# ""#);
   |             +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:58:12
   |
LL |     demo1!(####"");
   |            ^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(#### "");
   |                +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:59:12
   |
LL |     demo1!(#"foo");
   |            ^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(# "foo");
   |             +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:60:12
   |
LL |     demo1!(###"foo");
   |            ^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(### "foo");
   |               +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:61:12
   |
LL |     demo1!(#"foo"#);
   |            ^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(# "foo"#);
   |             +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:62:12
   |
LL |     demo1!(###"foo"#);
   |            ^^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(### "foo"#);
   |               +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:63:12
   |
LL |     demo1!(###"foo"##);
   |            ^^^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(### "foo"##);
   |               +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:64:12
   |
LL |     demo1!(###"foo"###);
   |            ^^^^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(### "foo"###);
   |               +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:67:12
   |
LL | ...n!(####################################################################################################################################################################################################################################################################"foo...
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024

error: aborting due to 13 previous errors

